--- a/src/umr/static/styles/article.css
+++ b/src/umr/static/styles/article.css
@@ -12,7 +12,7 @@
 }
 
 .articleLayout {
-  width: 100%;
+  margin-left: 12.5em;
   height: 100%;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -632,4 +632,28 @@ a:hover {
   100% {
     opacity: 1;
   }
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+  
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: #F4F4F4; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #FFD047; 
+  border-radius: 10px;
+  height:2px; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background:#FFD047; 
 }
