--- a/src/umr/templates/article.html
+++ b/src/umr/templates/article.html
@@ -16,6 +16,12 @@
     gtag("config", "UA-89557275-2");
   </script>
 
+      <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/side-bar.css') }}"
+    />
+
   <!--FONT LINK-->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400&display=swap" rel="stylesheet" />
 
@@ -37,8 +43,9 @@
     Loading article ...
   </div>
 
+  
   <!-- Top bar -->
-  <div class="articleLayout">
+  <div class="articleLayout" id="main-containerID">
     <header class="articleHeader">
       <!-- {% include "question__problems_with_article.html" %} -->
 
@@ -65,6 +72,7 @@
         </div>
       </div>
     </header>
+    {% include  "sideBar.html" %}
 
     <span id="articleID" style="display: none">{{ article_id }}</span>
 
