--- a/src/umr/templates/bookmarks.html
+++ b/src/umr/templates/bookmarks.html
@@ -4,7 +4,6 @@
   <header class="mdl-layout__header mdl-layout__header--transparent">
 
     <div class="mdl-layout__tab-bar mdl-js-ripple-effect" class="select-article">
-      <p class="welcome_personal">Welcome,</p>
       <h1 class="select-article">Select an Article</h1>
       <div class="all__tabs">
         <div class="row__tab">
@@ -60,16 +59,18 @@
           <!-- List of articles -->
           <ul id="articleLinkList" class="articleLinkList"></ul>
           <br />
+          <!-- 
           <div id="emptyArticleListImage" class="emptyPage">
             <p>You are not subscribed to any feeds </p>
           </div>
+          -->
         </div>
       </section>
       <section class="mdl-layout__tab-panel" id="starred">
         <div class="page-content">
           <ul id="starredArticleList" class="articleLinkList"></ul>
           <div id="emptyStarredArticleListImage" class="emptyPage">
-            <p> You have not bookmarked any articles yet :(</p>
+            <p> You have not bookmarked any articles yet!</p>
           </div>
         </div>
       </section>
