--- a/src/umr/static/scripts/newStyling/article-settings.css
+++ b/src/umr/static/scripts/newStyling/article-settings.css
@@ -30,13 +30,14 @@
 
 .interestButton,
 button {
+  cursor: pointer;
   margin-right: 0.625em;
   width: 100%;
 }
 
 #search-expandable {
   all: unset;
-  border: 0.125em solid #ffbb54;
+  border: 0.17em solid #ffbb54;
   border-radius: 0.9375em;
   padding: 0.125em;
   padding-left: 0.5em;
@@ -45,7 +46,7 @@ button {
   font-weight: 100;
   font-size: 0.875em;
   width: 17.5em;
-  height: 1.375em;
+  height: 1.5em;
 }
 
 .widthOfColumn {
@@ -57,20 +58,22 @@ button {
 }
 
 .tagsOfInterests {
+  cursor: pointer;
   background: #fff4e2;
-  border-radius: 0.1875em;
+  border-radius: 0.5em;
   display: none;
-  width: 100%;
+  width: 70%;
   padding: 5px;
   text-align: center;
   overflow: auto;
 }
 
 .tagsOfNonInterests {
+  cursor: pointer;
   background: #fff4e2;
-  border-radius: 3px;
+  border-radius: 0.5em;
   display: none;
-  width: 100%;
+  width: 70%;
   padding: 5px;
   text-align: center;
   overflow: auto;
@@ -97,6 +100,7 @@ button {
 }
 
 .triangle {
+  cursor: pointer;
   width: 0;
   height: 0;
   border-left: 0.5625em solid transparent;
@@ -121,12 +125,12 @@ button {
 }
 
 .wordLabel {
-  margin-left: -0.625em;
+  margin-left: -0.8em;
   margin-bottom: 0.125em;
 }
 
 .levelLabel {
-  margin-left: -0.3125em;
+  margin-left: -0.5em;
   margin-bottom: 0.125em;
 }
 
@@ -194,6 +198,7 @@ button {
 }
 
 .interestsSettings {
+  margin-top: -0.2em;
 }
 
 .addInterestButton {
@@ -238,14 +243,15 @@ button {
   box-shadow: none;
   all: unset;
   border: 0.0625em solid #ffbb54;
-  border-radius: 0.625em;
+  border-radius: 1em;
   background-color: #ffffff;
   color: #ffbb54;
   font-size: 0.9375em;
+  padding: 0.1em;
   font-family: Montserrat;
   font-weight: 400;
   text-align: center;
-  min-width: 1.125em;
+  min-width: 1.25em;
   margin-top: 0.4375em;
   float: right;
 }
@@ -253,17 +259,17 @@ button {
 .closeTagsOfNonInterests {
   box-shadow: none;
   all: unset;
-  border: 1px solid #ffbb54;
-  border-radius: 10px;
-  /* padding: 0px 0px; */
+  border: 0.0625em solid #ffbb54;
+  border-radius: 1em;
   background-color: #ffffff;
   color: #ffbb54;
-  font-size: 15px;
+  font-size: 0.9375em;
+  padding: 0.1em;
   font-family: Montserrat;
   font-weight: 400;
   text-align: center;
-  min-width: 18px;
-  margin-top: 7px;
+  min-width: 1.25em;
+  margin-top: 0.4375em;
   float: right;
 }
 
