--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -304,7 +304,7 @@
             <div class="searchText headerElement">
                 {% raw %}{{ displayText }}{% endraw %}
             </div>
-              <button class='deleteSearch headerElement'>X</button>
+              <button class='deleteSearch headerElement'>--X</button>
             
         </div>
     </li>
