--- a/src/umr/templates/classroom.html
+++ b/src/umr/templates/classroom.html
@@ -149,7 +149,7 @@
     </li>
     <div class="articleLinkSpacer"></div>
   </script>
-
+<!--
 <script id="search-notification-template" type="text/template">
     <li class="fadeoutOnClick articleLinkEntry search-notification-box">
         <div class="articleLinkHeader">
@@ -161,8 +161,8 @@
             </div>
         </div>
     </li>
-    <div class="articleLinkSpacer"></div>
-  </script>
+    <div class="articleLinkSpacer"></div> 
+  </script> -->
 
 <!-- Dialog windows for adding a source, topic and filter. -->
 {% include 'addSourceDialog.html' %} {% include 'addTopicDialog.html' %}
