--- a/src/umr/static/scripts/newStyling/reader-list.css
+++ b/src/umr/static/scripts/newStyling/reader-list.css
@@ -148,9 +148,11 @@ body {
   font-size: 0.7em;
 }
 .articleLinkDifficulty {
-  width: 0em; 
+  width: 0em;
   float: unset;
   padding-left: 11px;
+  position: relative;
+  top: 2em;
 }
 .publishingTime {
   margin-right: 0.78125em;
