--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -44,6 +44,7 @@
               alt="search icon" />
           </a>
 
+          <div class="containerOptionsSorting">
           <div class="options" id="optionsID">
             <br /><br /><br />
 
@@ -163,15 +164,19 @@
           </div>
           <!-- Sorting buttons-->
           <div class="sortingCategories">
-            <div class="wordsSorting">
-              <div class="wordLabel">words</div>
-              <div id="triangleWords" class="triangle"></div>
-            </div>
-            <div class="levelSorting">
-              <div class="levelLabel">level</div>
-              <div id="triangleLevel" class="triangle"></div>
-            </div>
+            <div class="sortContainer">
+              <p id="sortby"> Sort articles by:</p>
+              <div class="wordsSorting">
+                <div class="wordLabel">words</div>
+                <div id="triangleWords" class="triangle"></div>
+              </div>
+              <div class="levelSorting">
+                <div class="levelLabel">level</div>
+                <div id="triangleLevel" class="triangle"></div>
+              </div>
           </div>
+        </div>
+      </div>
         </nav>
       </div>
     </div>
