fixed sort button to work onclick mobile

--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -48,35 +48,7 @@
           <div class="options" id="optionsID">
             <br /><br /><br />
 
-            <script>
-              function searchIconFunction(element) {
-                var options = document.getElementById("optionsID");
-                var optionsstyle = options.style.display;
-                if (optionsstyle == 'inline-flex') {
-                  options.style.display = 'none';
-                } else {
-                  options.style.display = 'inline-flex';
 
-                }
-              }
-            </script>
-
-            <script>
-              function resizeShowOptions() {
-                var w = window.outerWidth;
-                var options = document.getElementById("optionsID");
-                var nav = document.getElementById("myTopnav");
-
-                if (w >= 600) {
-                  options.style.display = 'inline-flex';
-                } else {
-                  nav.style.display = 'none';
-                  document.getElementById("arrow-p").className = 'arrow-none-block';
-                  document.getElementById('main-containerID').style.cssText = 'margin:0px;';
-                }
-
-              }
-            </script>
 
             <!---     <script>
           function onLoadMenu(){
@@ -163,7 +135,7 @@
             </div>
           </div>
           <!-- Sorting buttons-->
-          <div class="sortingCategories">
+          <div class="sortingCategories" id="sortingBox">
             <div class="sortContainer">
               <p id="sortby"> Sort articles by:</p>
               <div class="wordsSorting">
@@ -180,6 +152,44 @@
         </nav>
       </div>
     </div>
+
+    
+    <script>
+      function searchIconFunction(element) {
+        var options = document.getElementById("optionsID");
+        var optionsstyle = options.style.display;
+
+        var sortings = document.getElementById("sortingBox")
+        var sortingsstyle = sortings.style.display; 
+        if (optionsstyle == 'inline-flex' && sortingsstyle =='flex' ) {
+          options.style.display = 'none';
+          sortings.style.display = 'none'; 
+        } else {
+          options.style.display = 'inline-flex';
+          sortings.style.display = 'flex'; 
+
+        }
+      }
+    </script>
+
+    <script>
+      function resizeShowOptions() {
+        var w = window.outerWidth;
+        var options = document.getElementById("optionsID");
+        var nav = document.getElementById("myTopnav");
+        var sortings = document.getElementById("sortingBox")
+
+        if (w >= 600) {
+          options.style.display = 'inline-flex';
+          sortings.style.display = 'flex'; 
+        } else {
+          nav.style.display = 'none';
+          document.getElementById("arrow-p").className = 'arrow-none-block';
+          document.getElementById('main-containerID').style.cssText = 'margin:0px;';
+        }
+
+      }
+    </script>
     <div class="widthOfColumn">
       <div class="tagsOfInterests">
 
