--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -205,6 +205,12 @@
             <div id="emptyArticleListImage" class="emptyPage">
               <p> No articles</p>
             </div>
+            <div class="loader">
+              <div class="bounce"></div>
+              <p>Loading articles</p>
+            </div>
+              
+          </div>
         </section>
         <section class="mdl-layout__tab-panel" id="starred">
           <div class="page-content">
