--- a/src/umr/static/styles/loader.css
+++ b/src/umr/static/styles/loader.css
@@ -1,14 +1,12 @@
-.loader 
-{
-  display:none;
-  text-align:center;
-  width:100%;
+.loader {
+  display: none;
+  text-align: center;
+  width: 50px;
   height: 10em;
-  animation: colorshift 4s 0s infinite linear alternate, fadein 1s 0s 1 linear; 
+  animation: colorshift 4s 0s infinite linear alternate, fadein 1s 0s 1 linear;
 }
 
-.eleph 
-{
+.eleph {
   display: inline-block;
   animation: bounce 1.2s 1s infinite;
   height: 5em;
@@ -16,115 +14,92 @@
 }
 
 @keyframes bounce {
-  0% 
-  {
+  0% {
     transform: translateY(0);
   }
-  40% 
-  {
+  40% {
     transform: translateY(1em);
   }
-  60% 
-  {
+  60% {
     transform: translateY(-1em);
   }
-  80%
-  {
+  80% {
     transform: translateY(0);
   }
 }
 
-@keyframes colorshift 
-{
-  to 
-  {
+@keyframes colorshift {
+  to {
     filter: hue-rotate(360deg);
   }
 }
 
-@keyframes fadein 
-{
-  0% 
-  {
+@keyframes fadein {
+  0% {
     opacity: 0;
   }
-  100% 
-  {
-     opacity: 1;
+  100% {
+    opacity: 1;
   }
 }
 
-.emptyPage
-{
-  display:none;
+.emptyPage {
+  display: none;
   position: absolute;
-  text-align:center;
+  text-align: center;
   top: 50%;
-  left:50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   animation: upwards 1s 0s 1 linear, fadein 1s 0s 1 linear;
 }
 
-.sadEleph
-{
-  width:100%;
+.sadEleph {
+  width: 100%;
 }
 
 @keyframes upwards {
-  0%
-  {
+  0% {
     transform: translate(-50%, -40%);
   }
-  100%
-  {
+  100% {
     transform: translate(-50%, -50%);
   }
 }
 
-.wiggle
-{
-  animation: wiggleLeftRight 0.3s 0s infinite linear reverse
+.wiggle {
+  animation: wiggleLeftRight 0.3s 0s infinite linear reverse;
 }
 
-.mdl-layout__drawer-button.wiggle
-{
-  animation: wiggleLeftRightAgressive 1s 0s infinite linear reverse
+.mdl-layout__drawer-button.wiggle {
+  animation: wiggleLeftRightAgressive 1s 0s infinite linear reverse;
 }
 
 @keyframes wiggleLeftRight {
-  0%
-  {
+  0% {
     transform: rotate(0deg);
   }
-  25%
-  {
+  25% {
     transform: rotate(-2deg);
   }
-  50%
-  {
+  50% {
     transform: rotate(0deg);
   }
-  75%
-  {
+  75% {
     transform: rotate(2deg);
   }
 }
 
 @keyframes wiggleLeftRightAgressive {
-  0%
-  {
+  0% {
     transform: rotate(0deg) scale(1, 1);
   }
-  25%
-  {
+  25% {
     transform: rotate(-6deg) scale(1.4, 1.4);
   }
-  50%
-  {
+  50% {
     transform: rotate(0deg) scale(1, 1);
   }
-  75%
-  {
+  75% {
     transform: rotate(6deg) scale(1.4, 1.4);
   }
 }
