--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -206,7 +206,7 @@
               <p> No articles</p>
             </div>
             <div class="loader">
-              <div class="bounce"></div>
+              <div class="circle loading"></div>
               <p>Loading articles</p>
             </div>
               
