--- a/src/umr/static/scripts/newStyling/loading.css
+++ b/src/umr/static/scripts/newStyling/loading.css
@@ -1,11 +1,48 @@
 .loader {
-  width: 80%;
-  height: 150px;
-  margin: 2rem auto;
+  width: 100%;
+  margin: 0;
+  margin-top: 5%;
+  text-align: center;
+}
+
+.circle {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: #ffd047;
+  box-shadow: 4px -40px 60px 5px rgb(255, 187, 84) inset;
+}
+
+.loading {
+  background: linear-gradient(to right, rgb(255, 187, 84) 50%, transparent 50%);
+  animation: spin 1s infinite linear;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.loading::before {
+  display: block;
+  content: "";
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90px;
+  height: 90px;
+  background: #ffffff;
+  border-radius: 50%;
 }
 
 .bounce {
-  animation: bounce 2s ease infinite;
+  animation: bounce 1s ease infinite;
 }
 @keyframes bounce {
   0%,
