--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -202,9 +202,21 @@
             <!-- List of articles -->
             <ul id="articleLinkList" class="articleLinkList"></ul>
             <br />
-            <div id="emptyArticleListImage" class="emptyPage">
-              <p> No articles</p>
+            <div id="emptyArticleListImage" class="emptyPage" style="display: none;">
+
+              <div class="icon-search"> 
+                <svg version="1.1" viewBox="0 0 50 50"><g>
+                <g class="notFound">
+                  <circle class="st0" cx="25" cy="25" r="17.1"/>
+                  <line class="st0" x1="53.4" y1="51.6" x2="38.8" y2="36.9"/>
+                </g>
+                </svg>
+              </div>
+              <p> No articles</p> 
+
+
             </div>
+
             <div class="loader">
               <div class="circle loading"></div>
               <p>Loading articles</p>
