--- a/src/umr/templates/sideBar.html
+++ b/src/umr/templates/sideBar.html
@@ -1,3 +1,8 @@
+<head>
+  <link rel="stylesheet" type="text/css"
+    href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/side-bar.css') }}" />
+</head>
+
 <nav class="nav-menu">
 
   <a href="javascript:void(0);" class="arrow-icon" id="arrow-p" onclick="sideBarFunction(this)">
