--- a/src/umr/templates/article.html
+++ b/src/umr/templates/article.html
@@ -16,11 +16,12 @@
     gtag("config", "UA-89557275-2");
   </script>
 
-      <link
-      rel="stylesheet"
-      type="text/css"
-      href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/side-bar.css') }}"
-    />
+  <link rel="stylesheet" type="text/css"
+    href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/side-bar.css') }}" />
+
+  <!--CSS for NEW general style-->
+  <link rel="stylesheet" type="text/css"
+    href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/style.css') }}" />
 
   <!--FONT LINK-->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400&display=swap" rel="stylesheet" />
@@ -43,7 +44,7 @@
     Loading article ...
   </div>
 
-  
+
   <!-- Top bar -->
   <div class="articleLayout" id="main-containerID">
     <header class="articleHeader">
