--- a/src/umr/templates/sideBar.html
+++ b/src/umr/templates/sideBar.html
@@ -10,8 +10,10 @@
   </a>
 
   <div class="sidenav" id="myTopnav">
-    <img class="zeeguuLogo" src="{{ url_for('reader_blueprint.static',filename='images/zeeguuLogo.svg') }}"
-      alt="Zeeguu Logo - The Elephant" />
+    <a href="{{ url_for('reader_blueprint.articles')}}">
+      <img class="zeeguuLogo" src="{{ url_for('reader_blueprint.static',filename='images/zeeguuLogo.svg') }}"
+        alt="Zeeguu Logo - The Elephant" />
+    </a>
     <div class="dropdown">
       <button class="dropbtn">| Articles <span id="arrow"></span></button>
       <div class="dropdown-content">
